Bug 476174 - Default Download Directory (DfltDwnld) uses old Safari 2's value instead of Leopard's ~/Downloads This changeset makes us default to the Downloads folder on OS X 10.5 and later, and the Desktop for 10.4.  Additionally, this fixes bug 301647 ([Mac] remove support of retrieving the 'system' download folder from nsDirectoryService::GetFile).

r=gavin
r=josh
sr=bsmedberg
ui-r=beltzner